# cirrus-deploy

./: .gitignore  .sshconfig  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build  build_cirrus  build_env  build_petsc  build_using_manylinux2014  config  config.yaml  deploy  deploy_runcirrus  devenv.nix  flake.nix  git-cirrus-deploy-key  git-cirrus-deploy-key.pub  mkdocs.yml  pyproject.toml  startdocker.sh  top-level_runcirrus
.github/workflows/: docs.yml  full.yml  publish.yml  python.yml  rust.yml
deploy_tests/: test_cirrus.py  test_pflotran.py
deploy_tests/data/: spe1.grdecl  spe1.in
deploy_tests/snapshots/test_cirrus/test_spe1/: stdout
deploy_tests/snapshots/test_pflotran/test_spe1/: stdout
docs/: index.md
docs/api/: config.md
docs/commands/: build.md  enter.md  install.md  schema.md  sync.md  test.md
examples/cirrus/: cirrus.config.yaml  runcirrus.config.yaml
examples/full/: Containerfile  cirrus.config.yaml  phast.config.yaml  runcirrus.config.yaml
examples/hello_world/: binary.sh  config.yaml
examples/hello_world/karsk_tests/: test_versions.py
examples/linked_dependency/: Containerfile  config.yaml
examples/linking/: README.md  app.c  config.yaml
examples/phast/: Containerfile  config.yaml
examples/phast/karsk_tests/: test_version.py
runcirrus/: Cargo.toml
runcirrus/src/: help.txt  job.sh.in  main.rs
spack/: repo.yaml
spack/environments/cirrus/: spack.yaml
src/: mpi-cirrus  runcirrus  runcirrus.py  runpflotran
src/deploy/: __main__.py  _check.py  build.py  builder.py  check.py  chroot.py  cli.py  config.py  context.py  engine.py  fetchers.py  links.py  oci.py  package.py  package_list.py  sync.py  update.py  utils.py
src/deploy/commands/: build.py  schema.py  sync.py  test.py
src/deploy/scripts/: _cirrus_logger.py  build_cirrus.sh  build_mpich.sh  build_petsc.sh  build_pflotran.sh  build_runcirrus.sh  runcirrus.py
src/deploy/utils/: fetch_from_github.py
src/karsk/: __init__.py  builder.py  cli.py  config.py  console.py  context.py  engine.py  fetchers.py  links.py  package.py  package_list.py  paths.py  testing.py  utils.py  wrapper.py
src/karsk/commands/: _common.py  build.py  build_wrapper.py  enter.py  init.py  install.py  schema.py  sync.py  test.py
src/karsk/data/: enter.bashrc
src/karsk/data/templates/: Containerfile.in  config.yaml.in  test_version.py.in
src/karsk/data/wrapper-rs/: Cargo.toml
src/karsk/data/wrapper-rs/src/: main.rs  util.rs  versions.rs
src/karsk/templates/: config.yaml.in
src/runcirrus/: about.txt  job.in  main.rs
tests/: conftest.py  test_build.py  test_chroot.py  test_cli.py  test_context.py  test_install.py  test_links.py  test_runcirrus.py  test_sync.py  test_update.py  test_util.py
tests/integration/: Containerfile  conftest.py  test_build_git.py  test_build_hello.py
tests/integration/data/: bar.c  foo.c
tests/integration/data/scripts/: build_bar.sh  build_foo.sh
tests/snapshots/test_context/test_single_package/content-config_update0/: expected_hash
tests/snapshots/test_context/test_single_package/content-config_update2/: expected_hash
tests/snapshots/test_context/test_single_package/different_content-config_update1/: expected_hash
tests/snapshots/test_context/test_single_package/different_content-config_update3/: expected_hash
tests/snapshots/test_context/test_single_package/file_source/: expected_hash
tests/snapshots/test_context/test_single_package/git_source/: expected_hash
